@@ -8,6 +8,7 @@
   <include package=".browser" />
 
   <cmf:registerDirectory name="classic_styles"/>
+  <cmf:registerDirectory name="classic_ecmascript"/>
 
   <five:registerPackage package="." />
 
