@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_javascripts" meta_type="JavaScripts Registry">
+ <javascript id="iefixes.js" conditionalcomment="lt IE 8" />
+</object>
