@@ -4,7 +4,18 @@ Changelog
 1.0a3 - Unreleased
 ------------------
 
-- Made sure the theme is activated on install.
+- Register iefixes (css and js) in the proper resource registries,
+  using the conditionalcomments property.  
+  Refs http://dev.plone.org/plone/ticket/9278.  
+  [dukebody]
+
+- Move iefixes.js to this package, since we agreed
+  upon that every theme should be responsible of its own fixes for IE.
+  Refs http://dev.plone.org/plone/ticket/9278.
+  [dukebody]
+
+- Activate this skin in the Plone site upon installation.
+  Fixes http://dev.plone.org/plone/ticket/10011.
   [dukebody]
 
 - moved plone.css.py to CMFPlone - it doesn't belong to classic theme
